--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -225,6 +225,7 @@
         <button id="bt" type="button" class="btn btn-success mt-3">
           Enviar
         </button>
+        <button>emmmm</button>
       </div>
     </div>
     <div id="footer" class="container-fluid text-center mt-4" style="padding: 0">
