--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <div class="container-fluid mt-5" style="padding-left: 0">
       <div class="row">
         <div class="col-lg-6">
-          <img src="/img/imgs/honolulu.jpg" width="700" height="400" alt="" />
+          <img src="../img/imgs/honolulu.jpg" width="700" height="400" alt="" />
         </div>
         <div class="col-lg-6 bg-dark text-white">
           <h1 class="mt-4">Bs As - Octubre</h1>
