cambio a codo a codo

--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
       <div class="container-fluid ">
         <a href="#" class="navbar-brand"
           ><img
-            src="/img/imgs/codoacodo.png"
+            src="/img/codoacodo.png"
             alt="Bootstrap"
             width="100"
             height="60"
