--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,7 +19,7 @@
       <div class="container-fluid ">
         <a href="#" class="navbar-brand"
           ><img
-            src="/img/imgs/codoacodo.png"
+            src="codoacodo.png"
             alt="Bootstrap"
             width="100"
             height="60"
@@ -48,7 +48,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/img/imgs/ba1.jpg" class="d-block w-100" alt="Palacio de Aguas">
+          <img src="ba1.jpg" class="d-block w-100" alt="Palacio de Aguas">
           <div class="carousel-caption d-none d-md-block text-end">
                 <div class="container" >
                   <div class="row bg-dark bg-opacity-25" style="padding-left:50% ;">
@@ -79,7 +79,7 @@
   
     
         <div class="carousel-item">
-          <img src="/img/imgs/ba2.jpg" class="d-block w-100" alt="España">
+          <img src="ba2.jpg" class="d-block w-100" alt="España">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50">
             <h5>Casino  y Teatro Marin</h5>
             <p>Es un inmueble ubicado en la ciudad española de Teruel,
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/img/imgs/ba3.jpg" class="d-block w-100" alt="Obelisco">
+          <img src="ba3.jpg" class="d-block w-100" alt="Obelisco">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-25">
             <h5>Obelisco de Buenos Aires</h5>
             <p>Es un monumento histórico considerado un ícono de
@@ -116,7 +116,7 @@
       <div class="col-lg-12 mt-4">
         <div class="card-group">
           <div class="card">
-            <img class="card-img-top" src="/img/imgs/Steve.jpg" alt="Card image cap">
+            <img class="card-img-top" src="Steve.jpg" alt="Card image cap">
             <div class="card-body">
               <div>
               <span class="badge text-bg-warning  ">JavaScript</span>
@@ -130,7 +130,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/img/imgs/bill.jpg" alt="Card image cap">
+            <img class="card-img-top" src="bill.jpg" alt="Card image cap">
             <div class="card-body">
               <div>
               <span class="badge text-bg-warning ">JavaScript</span>
@@ -143,7 +143,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="/img/imgs/ada.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="ada.jpeg" alt="Card image cap">
             <div class="card-body">
               <div>
               <span class="badge text-bg-secondary ">Negocios</span>
@@ -160,7 +160,7 @@
     <div class="container-fluid mt-5" style="padding-left: 0">
       <div class="row">
         <div class="col-lg-6">
-          <img src="/img/imgs/honolulu.jpg" width="700" height="400" alt="" />
+          <img src="honolulu.jpg" width="700" height="400" alt="" />
         </div>
         <div class="col-lg-6 bg-dark text-white">
           <h1 class="mt-4">Bs As - Octubre</h1>
